# AndroidLame

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/fjz/android/androidlame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fjz/android/androidlame/: AndroidAVStudy.kt  MainActivity.kt  RecordingService.kt
app/src/main/java/com/fjz/android/androidlame/aac/: AACRecorder.kt  AACRecorderActivity.kt
app/src/main/java/com/fjz/android/androidlame/mp3/: Mp3RecorderActivity.kt  RecordingService.kt
app/src/main/res/layout/: activity_aacrecorder.xml  activity_android_avstudy.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fjz/android/androidlame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lame-lib/: build.gradle.kts
lame-lib/libs/lame/arm64-v8a/lib/: libmp3lame.la
lame-lib/libs/lame/armeabi-v7a/lib/: libmp3lame.la
lame-lib/libs/lame/x86/lib/: libmp3lame.la
lame-lib/libs/lame/x86_64/lib/: libmp3lame.la
lame-lib/src/androidTest/java/com/fjz/android/mylibrary/: ExampleInstrumentedTest.kt
lame-lib/src/main/cpp/: CMakeLists.txt  mylibrary.cpp
lame-lib/src/main/java/com/fjz/android/mylibrary/: LameUtil.kt
lame-lib/src/test/java/com/fjz/android/mylibrary/: ExampleUnitTest.kt
